<resources>
    <string name="app_name">GuitApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="guitar_list_fragment_label">Guitar List</string>
    <string name="guitar_edit_fragment_label">Guitar Edit</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="model">Model:</string>
    <string name="price">Price:</string>
    <string name="date">Date:</string>
    <string name="available">Available</string>
    <string name="delete">Delete</string>
    <string name="guitars">Guitars</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Log in</string>
    <string name="invalid_username">Username is invalid</string>
    <string name="invalid_password">Password is invalid</string>
    <string name="login_fragment_label">Login</string>
</resources>