<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_guitar_list">
    <fragment
        android:id="@+id/fragment_login"
        android:name="com.example.guitapp.auth.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_GuitarListFragment"
            app:destination="@id/fragment_guitar_list" />
    </fragment>
    <fragment
        android:id="@+id/fragment_guitar_list"
        android:name="com.example.guitapp.guitar.list.GuitarListFragment"
        android:label="@string/guitar_list_fragment_label"
        tools:layout="@layout/fragment_guitar_list">

        <action
            android:id="@+id/action_GuitarListFragment_to_GuitarEditFragment"
            app:destination="@id/fragment_guitar_edit" />
    </fragment>
    <fragment
        android:id="@+id/fragment_guitar_edit"
        android:name="com.example.guitapp.guitar.edit.GuitarEditFragment"
        android:label="@string/guitar_edit_fragment_label"
        tools:layout="@layout/fragment_guitar_edit">

        <action
            android:id="@+id/action_GuitarEditFragment_to_GuitarListFragment"
            app:destination="@id/fragment_guitar_list" />
    </fragment>
</navigation>